cargo-features = ["strip"]

[package]
name = "pink-proxy"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
dotenv = "0.15.0"
constant_time_eq = "0.1.5"
actix-service = "2.0.0"

[dependencies.derive_more]
version = "0.99.16"
default-features = false
features = ["display"]

[dependencies.log]
version = "0.4"
features = ["release_max_level_info"]

[dependencies.env_logger]
version = "0.9.0"
default_features = false
features = ["atty", "humantime"]

[dependencies.sentry]
version = "0.23.0"
optional = true
default-features = false
features = ["backtrace", "contexts", "panic", "reqwest", "rustls"]

[dependencies.sentry-actix]
# https://github.com/getsentry/sentry-rust/pull/316
git = "https://github.com/slickbench/sentry-rust"
branch = "update-actix"
optional = true

[dependencies.actix-web]
version = "4.0.0-beta"
default-features = false

[dependencies.awc]
version = "3.0.0-beta"
default-features = false
features = ["rustls"]

[dependencies.actix-rt]
version = "2.2.0"

[dependencies.uuid]
version = "0.8.2"
features = ["v4", "serde"]

[dependencies.tokio]
version = "1.9.0"
default-features = false
features = ["time", "sync"]

[features]
error_reporting = ["sentry", "sentry-actix"]
color = ["env_logger/termcolor"]

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = 'abort'
